# 4MbI-2

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh
include/: Gram-Shmidt.hpp  generate_rand.hpp  iterative_methods.hpp  matrix.hpp  spectrum.hpp
src/: matrix.cpp
tests/: SLAU_var_6.txt  in4096.txt
Отчёт/: report.tex
